[package]
name = "panrelease"
version = "0.4.0"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Utility to release software"
keywords = [ "cli", "tool", "git", "release" ]
repository = "https://github.com/dghilardi/panrelease"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"

anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }

update-informer = "0.6.0"

git2 = "0.15.0"
semver = "1.0.14"
chrono = "0.4.23"

serde = {version = "1.0.149", features = ["derive"]}
toml = "0.5.9"

nom = "7.1.1"
toml_edit = "0.15.0"
