[package]
name = "panrelease"
version = "0.9.1"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Utility to release software"
keywords = [ "cli", "tool", "git", "release" ]
repository = "https://github.com/dghilardi/panrelease"
license = "MIT"
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
libgit = ["git2"]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"

anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
exitcode = "1.1.2"

update-informer = "0.6.0"

git2 = { version = "0.15.0", optional = true }
semver = "1.0.14"
chrono = "0.4.23"

serde = {version = "1.0.149", features = ["derive"]}
toml = "0.5.9"

regex = "1.7.0"
nom = "7.1.1"
toml_edit = "0.15.0"

# WASM
js-sys = "0.3.55"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = { version = "0.1.6", optional = true }
tokio = "1.27.0"
futures = "0.3.28"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

